--- a/static/index.html
+++ b/static/index.html
@@ -25,7 +25,7 @@
     <section id="HelloSection" style="margin: 0px; padding: 0px;">
         <div class="check">
             <p class="brandText checkImg">Психологический weekend</p>
-            <P class="whatAboutTour"><b>Цель тура:</b> Отдых тела и души</P>
+            <P class="whatAboutTour">Отдых тела и души</P>
             <div class="buttonsHeader">
                 <a class="customButton classForMedia" id="buttonForBron" href="#forHref">Забронировать</a>
                 <a class="customButton classForMedia" id="buttonAbout" href="#forHref1">Программа тура</a>
@@ -49,7 +49,7 @@
         <ul style="margin-top: 1rem;">
             <li class="textInside">Трансфер</li>
             <li class="textInside">Гостиница</li>
-            <li class="textInside">Питание</li>
+            <li class="textInside">Питание (Full Board - полный пансион)</li>
             <li class="textInside">Сеансы</li>
             <li class="textInside">Терапия</li>
             <li class="textInside">Консультация</li>
@@ -61,24 +61,24 @@
         <ul>
             <li class="textInside" style="margin-top: 1rem;">
                 <b>1-й день:</b>
-                <br>Наш уникальный тур начинается в историческом городе Ереван. В 14:00 собираемся на площади Железнодорожного вокзала у памятника «Сасунци Давид». На комфортабельном автобусе направляемся в город Дилижан (расстояние 110 км). В Армении
-                его называют «Маленькая Швейцария». Прибываем в гостиницу «Агарцин», которая завораживает своей природой. Отдыхаем после заселения. Вечером нас ждет специальный ужин с шашлыком и увлекательный тренинг – «Знакомство».
+                <br>Наш уникальный тур начинается в историческом городе Ереван. В 14:00 собираемся на площади Железнодорожного вокзала у памятника «Сасунци Давид». На комфортабельном автобусе направляемся в город Дилижан. В Армении его называют «Маленькая
+                Швейцария». Прибываем в гостиницу «Агарцин», которая завораживает своей природой. Отдыхаем после заселения. Вечером нас ждет специальный ужин с шашлыком и увлекательный тренинг – «Знакомство».
 
             </li>
             <li class="textInside" style="margin-top: 1rem;">
                 <b>2-й день:</b>
-                <br>День начнем с йоги (по желанию), но думаем, что равнодушных не будет. Она поднимет настроение и даст заряд энергии на весь день. После вкусного завтрака выезжаем в район озера Севан (расстояние 20 км), где на высоте 2200 метров над
-                уровнем моря, в лесной поляне проведем медитацию, которая очистит разум, наполнит высокими вибрациями и гармонизирует сознание. А горный чистый воздух наполнит ваш организм кислородом. После медитации отправляемся к храму «Севанаванк»,
-                где на высоте птичьего полета можно насладиться пейзажами озера Севан, его окрестностями, и сделать красивые фотографии на память. Обед будет проходить в шикарном ресторане на берегу озера Севан, где можно также любоваться красотой озера
-                и слушать крик чаек. Затем мы возвращаемся в гостиницу, где отдыхаем с дороги и проводим личное время. После ужина «Гвоздь программы № 1» - групповой гипнотерапевтический сеанс, который настроит ваши мысли на позитив, подарит легкость
-                и уверенность, перестроит вашу психику. А также успокоит вашу нервную систему.
+                <br>День начнем с йоги (по желанию), но думаем, что равнодушных не будет. Она поднимет настроение и даст заряд энергии на весь день. После вкусного завтрака выезжаем в район озера Севан, где на высоте 2200 метров над уровнем моря, в лесной
+                поляне проведем медитацию, которая очистит разум, наполнит высокими вибрациями и гармонизирует сознание. А горный чистый воздух наполнит ваш организм кислородом. После медитации отправляемся к храму «Севанаванк», где на высоте птичьего
+                полета можно насладиться пейзажами озера Севан, его окрестностями, и сделать красивые фотографии на память. Обед будет проходить в шикарном ресторане на берегу озера Севан, где можно также любоваться красотой озера и слушать крик чаек.
+                Затем мы возвращаемся в гостиницу, где отдыхаем с дороги и проводим личное время. После ужина «Гвоздь программы № 1» - групповой гипнотерапевтический сеанс, который настроит ваши мысли на позитив, подарит легкость и уверенность, перестроит
+                вашу психику. А также успокоит вашу нервную систему.
 
             </li>
             <li class="textInside" style="margin-top: 1rem;">
                 <b>3-й день:</b>
-                <br>Для бодрого и прекрасного утра мы начинаем его с йоги (по желанию). После завтрака нас ждет «Гвоздь программы № 2» - смехатерапия, с элементами йоги смеха. Сеанс позволит зарядиться позитивной энергией надолго, а также оставит хорошие
-                напоминания отдыха. Эндорфины гарантированы. После сеанса личное время (бассейн, настольные игры, тренажёрный зал, прогулка), обед. Перед отъездом нас ждет «чайная церемония», но не по обычаям Японии, а как в Армении – по-домашнему, где
-                мы обсудим наш с вами отдых. Отдохнувшие, наполненные энергией и позитивом возвращаемся в город Ереван.
+                <br>Для бодрого и прекрасного утра мы начинаем его с йоги (по желанию). После завтрака нас ждет «Гвоздь программы № 2» - смехотерапия, с элементами йоги смеха. Сеанс позволит зарядиться позитивной энергией надолго, а также оставит хорошие
+                напоминания отдыха. Эндорфины гарантированы. После сеанса личное время (бассейн, настольные игры, тренажёрный зал, прогулка), обед. Перед отъездом нас ждет «чайная церемония», где мы обсудим наш с вами отдых. Отдохнувшие, наполненные энергией
+                и позитивом возвращаемся в город Ереван.
             </li>
         </ul>
         <ul>
@@ -242,7 +242,7 @@
                     <img src="./img/hotel/photoHotel1.jpg" style="width: 100%;height: 100%; padding-bottom: 2rem;">
                 </div>
                 <div class="col-lg-6 col-md-12 col-sm-12">
-                    <p class="textInside">Интерьер, который обеспечен всем необходимыми условиями для комфортного и полноценного отдыха. Из номеров открывается вид на красивую природу. Ресторан предлагает широкий выбор блюд национальной и европейской кухни. Действует бильярд
+                    <p class="textInside">Интерьер, который обеспечен всеми необходимыми условиями для комфортного и полноценного отдыха. Из номеров открывается вид на красивую природу. Ресторан предлагает широкий выбор блюд национальной и европейской кухни. Действует бильярд
                         и настольный теннис, также есть бассейн и сауна. На всей территории есть бесплатный Wi-Fi. Высококачественное обслуживание и качественные услуги отеля удовлетворят самого требовательного посетителя. Гостиничный комплекс «Агарцин»
                         - идеальное место для всех, кто хочет отдохнуть от городского шума и провести свой отдых на природе.
                     </p>
