--- a/static/loginOrRegister.html
+++ b/static/loginOrRegister.html
@@ -10,52 +10,80 @@
     <title>Login/Register</title>
 </head>
 
-<body>
+<body onload="onLoad()">
+
+    <div class="loader loader--active" id="loaderAnim">
+        <div class="loader__icon">
+            <svg version="1.1" id="loader-1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="40px" height="40px" viewBox="0 0 40 40" enable-background="new 0 0 40 40" xml:space="preserve">
+            <path opacity="0.2" fill="#000" d="M20.201,5.169c-8.254,0-14.946,6.692-14.946,14.946c0,8.255,6.692,14.946,14.946,14.946s14.946-6.691,14.946-14.946C35.146,11.861,28.455,5.169,20.201,5.169z M20.201,31.749c-6.425,0-11.634-5.208-11.634-11.634c0-6.425,5.209-11.634,11.634-11.634c6.425,0,11.633,5.209,11.633,11.634C31.834,26.541,26.626,31.749,20.201,31.749z"></path>
+            <path fill="#000" d="M26.013,10.047l1.654-2.866c-2.198-1.272-4.743-2.012-7.466-2.012h0v3.312h0C22.32,8.481,24.301,9.057,26.013,10.047z"></path>
+            <animateTransform attributeType="xml" attributeName="transform" type="rotate" from="0 20 20" to="360 20 20" dur="0.5s" repeatCount="indefinite"></animateTransform>
+          </svg>
+        </div>
+        <div class="loader__tile"></div>
+        <div class="loader__tile"></div>
+        <div class="loader__tile"></div>
+        <div class="loader__tile"></div>
+        <div class="loader__tile"></div>
+    </div>
+
+    <center>
+        <div class="Logo" id="logo">
+            <img src="img/SecondLogo.png" style=" height: 96px !important;width: 170px !important;margin-top: -2rem;" alt="">
+
+        </div>
+    </center>
+
+
     <div class="form" id="form">
 
         <ul class="tab-group">
-            <li class="tab active"><a href="#signup">Зарегистрироваться</a></li>
-            <li class="tab"><a href="#login">Войти</a></li>
+            <li class="tab active" id="labelReg"><a href="#signup">Зарегистрироваться</a></li>
+            <li class="tab" id="labelLogin"><a href="#login">Войти</a></li>
         </ul>
 
+
         <div class="tab-content">
-            <div id="signup">
-                <h1 class="signupText">Зарегистрироваться бесплатно</h1>
+            <div id="formRegister">
+                <div id="signup">
+                    <h1 class="signupText">Зарегистрироваться</h1>
 
-                <form>
+                    <form>
 
-                    <div class="top-row">
-                        <div class="field-wrap">
-                            <p class="colorWhite">Имя</p>
-                            <input type="text" required autocomplete="off" id="nameRegister" />
+                        <div class="top-row">
+                            <div class="field-wrap">
+                                <p class="colorWhite">Имя</p>
+                                <input type="text" required autocomplete="off" id="nameRegister" />
+                            </div>
+
+                            <div class="field-wrap">
+                                <p class="colorWhite">Фамилия</p>
+                                <input type="text" required autocomplete="off" id="surNameRegister" />
+                            </div>
                         </div>
 
                         <div class="field-wrap">
-                            <p class="colorWhite">Фамилия</p>
-                            <input type="text" required autocomplete="off" id="surNameRegister" />
+                            <p class="colorWhite">Номер телефона</p>
+                            <input type="tel" value="+374" required autocomplete="off" id="phoneRegister" />
                         </div>
-                    </div>
 
-                    <div class="field-wrap">
-                        <p class="colorWhite">Номер телефона</p>
-                        <input type="tel" value="+374" required autocomplete="off" id="phoneRegister" />
-                    </div>
+                        <div class="field-wrap">
+                            <p class="colorWhite">Email</p>
+                            <input type="email" required autocomplete="off" id="emailRegister" />
+                        </div>
 
-                    <div class="field-wrap">
-                        <p class="colorWhite">Email</p>
-                        <input type="email" required autocomplete="off" id="emailRegister" />
-                    </div>
+                        <div class="field-wrap">
+                            <p class="colorWhite">Пароль</p>
+                            <input type="password" required autocomplete="off" id="passwordRegister" />
+                        </div>
 
-                    <div class="field-wrap">
-                        <p class="colorWhite">Пароль</p>
-                        <input type="password" required autocomplete="off" id="passwordRegister" />
-                    </div>
+                        <button type="button" class="button button-block" id="buttonRegister">Зарегистрироваться</button>
 
-                    <button type="button" class="button button-block" id="buttonRegister">Зарегистрироваться</button>
+                    </form>
 
-                </form>
-
+                </div>
             </div>
+
 
             <div id="login">
                 <h1 class="signupText">Добро пожаловать!</h1>
